     * Underground and chasm friendly volcanoes
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Indonesian, Japanese, Russian
 * User interface:
   * Fixed: Addon dialog in title screen shows last host again.
   * Fixed: Fullscreen hotkey works again in the title screen.
   * Fixed: Termination of the game when making the title screen small
     (bug #16724).

Version 1.9.1:
 * AI:
   * Fixed bug #16585: made AI move in targeting phase even if for some of the
     'best' units moves to targets are impossible
 * Campaigns:
   * Unified the campaign description of the number of scenarios. Now the
     number reflects only the battle scenarios of each campaign.
   * A Tale of Two Brothers:
     * New portraits for Arne and Bjarn.
   * Dead Water:
     * Fixed the last scenario not working due to an 'unknown scenario' error.
   * Descent into Darkness:
     * Fixed the 'A Small Favor' scenarios being unbeatable.
   * Eastern Invasion:
     * Increased Owaec's hitpoints and attack stats, and added a new weapon
       special to his morningstar on levels 2 and 3.
   * Legend of Wesmere:
     * Splitted the multiplayer port into five chapters with 3 difficult levels
       each.
       * (Beta)  Chapter one, a two player campaign, ends after scenario 3.
       * (Beta)  Chapter two, a three player campaign, ends after scenario 7.
       * (Alpha)  Chapter three, a four player campaign, ends after scenario 13.
       * (Alpha) Chapter four, a four player campaign, ends after scenario 17.
       * (Alpha) Chapter five, a two player campaign, ends with the single
                 player version.
       * There is no savefile compatibility between saves from an older version
         of Wesnoth.
     * Scenarios
       * Scenario one's objectives changed.
       * Completed a rewrite of scenario 5, changing the objectives, ai and
         game mechanism slightly.
       * Scenario 7