@@ -18,6 +18,7 @@ Version 1.9.1+svn:
    * Fixed: Fullscreen hotkey works again in the title screen.
    * Fixed: Termination of the game when making the title screen small
      (bug #16724).
+   * Fixed: A resize glitch causing resize events to be lost.
 
 Version 1.9.1:
  * AI:
